--- a/question-bank-backend/src/QuestionBank.Application/QuestionBank.Application.csproj
+++ b/question-bank-backend/src/QuestionBank.Application/QuestionBank.Application.csproj
@@ -1,9 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28" />
+      <PackageReference Include="NetDevPack.Security.Jwt.AspNetCore" Version="8.1.1" />
+      <PackageReference Include="NetDevPack.Security.Jwt.Core" Version="8.1.1" />
+      <PackageReference Include="ScottBrady91.AspNetCore.Identity.Argon2PasswordHasher" Version="1.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\QuestionBank.Infra\QuestionBank.Infra.csproj" />
+    </ItemGroup>
 
 </Project>
