--- a/question-bank-backend/src/QuestionBank.Infra/QuestionBank.Infra.csproj
+++ b/question-bank-backend/src/QuestionBank.Infra/QuestionBank.Infra.csproj
@@ -1,9 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.28" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\QuestionBank.Domain\QuestionBank.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
