refactor: edit .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ wwwroot/node_modules/
 ## Rider IDE
 .idea/
 
+## Development
+**/appsettings.Development.json
+
 # ============================
 # Angular
 # ============================
