feat: config front-end

--- a/question-bank-frontend/angular.json
+++ b/question-bank-frontend/angular.json
@@ -25,9 +25,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -63,7 +66,8 @@
               "browserTarget": "question-bank-frontend:build:production"
             },
             "development": {
-              "browserTarget": "question-bank-frontend:build:development"
+              "browserTarget": "question-bank-frontend:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
